# crop-chatbot

./: README.md  pyproject.toml  requirements.txt  test_setup.py  tests.py
app/: main.py
app/clients/: context_api_client.py  context_api_schemas.py  ollama_client.py
app/core/: config.py  logging.py
app/services/calculation/: calculator.py  schemas.py  units.py
app/tools/: unit_converter.py
data/: crops.json  documents.json  documents_old.json
scripts/: build_index.py  conversation_using_api.py  conversational_chain.py  prepare_data.py  rag_chain.py
