[project]
name = "crop-rag-chatbot"
version = "0.1.0"
description = "Multilingual RAG chatbot for crop information, built on LangChain + Ollama + FastAPI"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "langchain>=0.3",
    "langchain-ollama>=0.2",
    "langchain-core>=0.3",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]